# Django_inflearn

./: README.md
mydjango-drf/: api-test.http  pyproject.toml  pytest.ini
mydjango-drf/accounts/: admin.py  api.py  constants.py  managers.py  models.py  oauth_serializer.py  oauth_views.py  serializers.py  services.py  urls.py  views.py
mydjango-drf/accounts/services/: email_service.py  google_social_login_service.py  kakao_social_login_service.py  naver_social_login_service.py  social_login_service.py  token_service.py
mydjango-drf/blog/: admin.py  api.py  mixins.py  models.py  permissions.py  renderers.py  serializers.py  urls.py
mydjango-drf/blog/management/commands/: create_fake_posts.py
mydjango-drf/config/: settings.py  urls.py
mydjango01/: pyproject.toml
mydjango01/config/: settings.py
mydjango03-hottrack/: pyproject.toml
mydjango03-hottrack/config/: settings.py  urls.py
mydjango03-hottrack/hot_track/: admin.py  apps.py  converters.py  models.py  urls.py  views.py
mydjango03-hottrack/hot_track/management/commands/: load_melon_songs.py
mydjango03-hottrack/hot_track/templates/hot_track/: _song.html  index.html
mydjango03-hottrack/hot_track/utils/: cover.py
mydjango04/: pyproject.toml
mydjango04/config/: settings.py  urls.py
mydjango04/core/: context_processors.py  views.py
mydjango04/core/templates/: _messages_as_toast.html
mydjango04/core/templates/core/: index.html
