[tool.poetry]
name = "mydjango03-hottrack"
version = "0.1.0"
description = ""
authors = ["taewoo-dev <twin9774@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.8.0"
django = "^4.2.9"
django-debug-toolbar = "^4.4.6"
requests = "^2.32.3"
pillow = "^10.4.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
